{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 171,
  "lineage": "fac9254f-26a5-4100-aa8d-fe87e3e9f41c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc8849a6e4e856c2",
            "association_id": "eipassoc-039560b4a7133c4f0",
            "domain": "vpc",
            "id": "eipalloc-0fc8849a6e4e856c2",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-000c57c61bb318c96",
            "private_dns": "ip-10-0-0-161.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.161",
            "public_dns": "ec2-43-200-224-97.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.224.97",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-nat-eip"
            },
            "timeouts": {
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:internet-gateway/igw-07342d1072b79ec3b",
            "id": "igw-07342d1072b79ec3b",
            "owner_id": "588738590244",
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-igw"
            },
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:588738590244:loadbalancer/app/couponmoa-dev-alb/ca9401a299ad861a",
            "arn_suffix": "app/couponmoa-dev-alb/ca9401a299ad861a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "couponmoa-dev-alb-1847512713.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:588738590244:loadbalancer/app/couponmoa-dev-alb/ca9401a299ad861a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "couponmoa-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0209661124c49b33e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e0b66d4e1793a676"
              },
              {
                "subnet_id": "subnet-0f8856ce64a7b4f25"
              }
            ],
            "subnets": [
              "subnet-0e0b66d4e1793a676",
              "subnet-0f8856ce64a7b4f25"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-alb"
            },
            "vpc_id": "vpc-0623c2663f8d2a795",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:588738590244:listener/app/couponmoa-dev-alb/ca9401a299ad861a/516b2cd580a04d09",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:588738590244:targetgroup/couponmoa-dev-tg/35e260216b510caf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:588738590244:listener/app/couponmoa-dev-alb/ca9401a299ad861a/516b2cd580a04d09",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:588738590244:loadbalancer/app/couponmoa-dev-alb/ca9401a299ad861a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.ecs_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:588738590244:targetgroup/couponmoa-dev-tg/35e260216b510caf",
            "arn_suffix": "targetgroup/couponmoa-dev-tg/35e260216b510caf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:588738590244:targetgroup/couponmoa-dev-tg/35e260216b510caf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "couponmoa-dev-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc8849a6e4e856c2",
            "connectivity_type": "public",
            "id": "nat-03b72ebc72a505525",
            "network_interface_id": "eni-000c57c61bb318c96",
            "private_ip": "10.0.0.161",
            "public_ip": "43.200.224.97",
            "subnet_id": "subnet-0e0b66d4e1793a676",
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-nat-gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:route-table/rtb-013feab8536065050",
            "id": "rtb-013feab8536065050",
            "owner_id": "588738590244",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03b72ebc72a505525",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:route-table/rtb-046c14fe633e04fb7",
            "id": "rtb-046c14fe633e04fb7",
            "owner_id": "588738590244",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07342d1072b79ec3b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0503dcdda1ea26077",
            "route_table_id": "rtb-013feab8536065050",
            "subnet_id": "subnet-0dd70213c95d724e6"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fd8d2a04d77dc2b",
            "route_table_id": "rtb-013feab8536065050",
            "subnet_id": "subnet-0361809e3e1b2c823"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaf63ce84206716c",
            "route_table_id": "rtb-046c14fe633e04fb7",
            "subnet_id": "subnet-0e0b66d4e1793a676"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c91f532924683b0",
            "route_table_id": "rtb-046c14fe633e04fb7",
            "subnet_id": "subnet-0f8856ce64a7b4f25"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:security-group/sg-0209661124c49b33e",
            "description": "Allow HTTP/HTTPS to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0209661124c49b33e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "couponmoa-alb-sg",
            "name_prefix": "",
            "owner_id": "588738590244",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:security-group/sg-05538fa9311c926c1",
            "description": "Allow traffic from ALB and ECS services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05538fa9311c926c1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ECS internal communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0209661124c49b33e"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "couponmoa-ecs-sg",
            "name_prefix": "",
            "owner_id": "588738590244",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-ecs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:security-group/sg-08d5de21ed84cbf88",
            "description": "Allow MySQL from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d5de21ed84cbf88",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL access from ECS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05538fa9311c926c1"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "couponmoa-rds-sg",
            "name_prefix": "",
            "owner_id": "588738590244",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:security-group/sg-0be5b2fe3c410681e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be5b2fe3c410681e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Redis access from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05538fa9311c926c1"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "couponmoa-redis-sg",
            "name_prefix": "",
            "owner_id": "588738590244",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-redis-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:subnet/subnet-0dd70213c95d724e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd70213c95d724e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738590244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-private-subnet-1"
            },
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:subnet/subnet-0361809e3e1b2c823",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0361809e3e1b2c823",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738590244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-private-subnet-2"
            },
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:subnet/subnet-0e0b66d4e1793a676",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0b66d4e1793a676",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738590244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-public-subnet-1"
            },
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:subnet/subnet-0f8856ce64a7b4f25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8856ce64a7b4f25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738590244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-public-subnet-2"
            },
            "vpc_id": "vpc-0623c2663f8d2a795"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:588738590244:vpc/vpc-0623c2663f8d2a795",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a045d7bd6a4d3a2",
            "default_route_table_id": "rtb-036ce8287b1d7bef0",
            "default_security_group_id": "sg-09f7d44332dbe429a",
            "dhcp_options_id": "dopt-09e4980783194d8cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0623c2663f8d2a795",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036ce8287b1d7bef0",
            "owner_id": "588738590244",
            "tags": {
              "Environment": "dev",
              "Name": "couponmoa-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "couponmoa-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}